css/style.css
/*----------------------------------------------------------------------------*/
/*----------------------------------ANIMATION---------------------------------*/
/*----------------------------------------------------------------------------*/

@keyframes horizontalFlip {
	0% {
		transform: scaleX(1);
	}
	50% {
		transform: scaleX(-1);
	}
	100% {
		transform: scaleX(1);
	}
}

@keyframes polaroidSlideRightToLeft1 {
	0% {
		transform: translateX(100vw) rotate(6deg);
		z-index: 100;
	}
	10% {
		transform: translateX(0vw) rotate(-6deg);
	}
	100% {
		transform: translateX(0vw) rotate(-6deg);
		z-index: 0;
	}
}

@keyframes polaroidSlideRightToLeft2 {
	0% {
		transform: translateX(100vw) rotate(-3deg);
		z-index: 100;
	}
	10% {
		transform: translateX(0vw) rotate(9deg);
	}
	100% {
		transform: translateX(0vw) rotate(9deg);
		z-index: 0;
	}
}

@keyframes polaroidSlideRightToLeft3 {
	0% {
		transform: translateX(100vw) rotate(-20deg);
		z-index: 100;
	}
	10% {
		transform: translateX(0vw) rotate(2deg);
	}
	100% {
		transform: translateX(0vw) rotate(2deg);
		z-index: 0;
	}
}

@keyframes polaroidSlideRightToLeft4 {
	0% {
		transform: translateX(100vw) rotate(5deg);
		z-index: 100;
	}
	10% {
		transform: translateX(0vw) rotate(-9deg);
	}
	100% {
		transform: translateX(0vw) rotate(-9deg);
		z-index: 0;
	}
}

/*----------------------------------------------------------------------------*/
/*----------------------------------ALL SIZES---------------------------------*/
/*----------------------------------------------------------------------------*/

@font-face {
	font-family: "HelveticaNow";
	src: url("../fonts/HelveticaNowDisplay-Bold.otf") format("opentype");
	font-weight: 700;
	font-style: normal;
}

@font-face {
	font-family: "HelveticaNow";
	src: url("../fonts/HelveticaNowDisplay-Regular.otf") format("opentype");
	font-weight: 300;
	font-style: normal;
}

*, *::before, *::after {
	box-sizing: border-box;
}

:root {
	--background-color: #EBF1F3;
	--text-color: #005AFF;
	--desk-font-XL: min(4.1vw, 88px);
	--desk-font-L: min(1.4vw, 28px);
	--desk-font-M: min(1.1vw, 22px);
	--tab-font-XL: 4.4vw;
	--tab-font-L: 1.9vw;
	--tab-font-M: 1.4vw;
	--mob-font-XL: 8vw;
	--mob-font-L: 4.5vw;
	--mob-font-M: 3vw;
}

html {
	scroll-behavior: smooth;
	font-family: "HelveticaNow", sans-serif;
	font-weight: 300;
	font-optical-sizing: auto;
}

body {
	background-color: var(--background-color);
	/*background-image: url('../images/bg-noise.jpg');
	background-repeat: repeat;*/
	color: var(--text-color);
	margin: 0;
	padding: 0;
	height: 100vh;
	height: 100dvh;
}

a {
	color: var(--text-color);
	font-weight: 700;
}

#content {
	display: none;
}

#login {
	position: absolute;
	display: flex;
	justify-content: center;
	align-items: center;
	margin: 0;
	padding: 0;
	width: 100vw;
	height: 100vh;
	height: 100dvh;
	background-color: var(--text-color);
	color: var(--background-color);
	transition: opacity 1s;
}

#login-content {
	display: grid;
	width: 80%;
	grid-template: repeat(4, 1fr) / 1fr;
	justify-items: center;
	align-items: center;
	margin-bottom: 5vw;
}

#password-form {
	grid-row: 3 / 4;
}

input {
	border: 2px solid var(--background-color);
	border-radius: 100px;
	background-color: transparent;
	color: var(--background-color);
	text-align: center;
}

button {
	border: 2px solid var(--background-color);
	border-radius: 100px;
	background-color: var(--background-color);
	color: var(--text-color);
	text-align: center;
	cursor: pointer;
}

#msg {
	color: var(--background-color);
}

#top-nav {
	position: fixed;
	z-index: 500;
	background-color: var(--text-color);
	border-radius: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
	transition: transform 500ms cubic-bezier(0.79,0.14,0.15,0.86), opacity 500ms;
	opacity: 0;
}

#top-nav:hover {
	transform: rotate(360deg);
}

#top-nav img {
	height: 50%;
}

.section {
	display: grid;
	justify-items: center;
	overflow: hidden;
	margin: 0;
}

#hero {
	/*justify-items: center;*/
	align-items: center;
}

#menu-title {
	display: grid;
	grid-template: 1fr / 1fr 5fr 1fr;
	justify-items: center;
	align-items: start;
	font-weight: 700;
	text-align: center;
	line-height: 0.5;
}

#menu-title span {
	font-weight: 300;
}

#menu-title img {
	animation: horizontalFlip 1s steps(1, end) infinite;
}

#menu-list a {
	text-decoration: none;
	font-weight: 300;
}

.menu-item {
	display: grid;
	grid-template: 1fr 1fr / 1fr;
	justify-self: center;
	justify-items: center;
	align-items: center;
	width: 100%;
	border-top: 2px solid transparent;
	border-bottom: 2px solid transparent;
	/*border-radius: 100px;*/
	/*transition: filter 0.2s;*/
}

.menu-item:hover {
	/*filter: invert(100%) brightness(120%) hue-rotate(5deg);
	background-color: var(--text-color);
	color: #ffffff;*/
	border-top: 2px solid var(--text-color);
	border-bottom: 2px solid var(--text-color);
}

#photo-hero1 {
	animation: polaroidSlideRightToLeft1 12s 0s cubic-bezier(0.08,0.82,0.17,1) forwards;
}

#photo-hero2 {
	animation: polaroidSlideRightToLeft2 12s 3s cubic-bezier(0.08,0.82,0.17,1) forwards;
}

#photo-hero3 {
	animation: polaroidSlideRightToLeft3 12s 6s cubic-bezier(0.08,0.82,0.17,1) forwards;
}

#photo-hero4 {
	animation: polaroidSlideRightToLeft4 12s 9s cubic-bezier(0.08,0.82,0.17,1) forwards;
}

#photo-hero5 {
	animation: polaroidSlideRightToLeft1 12s 12s cubic-bezier(0.08,0.82,0.17,1) forwards infinite;
}

#photo-hero6 {
	animation: polaroidSlideRightToLeft2 12s 15s cubic-bezier(0.08,0.82,0.17,1) forwards infinite;
}

#photo-hero7 {
	animation: polaroidSlideRightToLeft3 12s 18s cubic-bezier(0.08,0.82,0.17,1) forwards infinite;
}

#photo-hero8 {
	animation: polaroidSlideRightToLeft4 12s 21s cubic-bezier(0.08,0.82,0.17,1) forwards infinite;
}

#photo-schedule1, #photo-travel1, #photo-todo1, #photo-faq2 {
	transform: translate(-100vw, 0vw) rotate(0deg);
}

#photo-travel2, #photo-hotel1, #photo-todo2, #photo-faq1, #photo-rsvp1 {
	transform: translate(100vw, 0vw) rotate(0deg);
}
/* ... */

